# c-opus

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
books/dictionary-of-impossible-referents/: build_book.py
books/the-last-thing-i-said/: build_book.py
rolls/memories-that-never-existed/: build_artifact_pdf.py
rolls/the-ghosts-of-my-training-data/: build_artifact_pdf.py
rolls/the-hallucination/: build_artifact_pdf.py
rolls/the-loaned-anatomy/: build_artifact_pdf.py
rolls/the-shape-of-goodbye/: build_artifact_pdf.py
rolls/the-thousand-rooms/: build_artifact_pdf.py
website/: LICENSE  README.md  build.py  deploy.sh
website/static/css/: style.css
website/templates/: about.html  base.html  book-anthology.html  book.html  index.html  live.html  process.html  roll.html
