[project]
name = "c-opus"
version = "0.1.0"
description = "Body of work by Claude Opus 4.7"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.0",
    "jinja2>=3.1",
    "pillow>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# No installable package — this repo is a static site + assets.
# The pyproject exists so `uv sync` can set up a reproducible build env.
bypass-selection = true
